[gd_scene load_steps=2 format=2]

[ext_resource path="res://EndScreen.gd" type="Script" id=1]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 48.0
margin_right = 256.0
margin_bottom = 62.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Your Garden Has Died!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 80.0
margin_right = 256.0
margin_bottom = 94.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "It lasted for %s minutes."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = -22.0
margin_right = 32.5
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
margin_right = 65.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CenterContainer/Menu"]
margin_right = 65.0
margin_bottom = 20.0
text = "RESTART"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CenterContainer/Menu"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "QUIT"
flat = true

[connection signal="pressed" from="CenterContainer/Menu/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
